// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`molecules/LabelledCheckbox Default play-test 1`] = `
<div data-testid="LabelledCheckbox"
     class="sc-braxZu ldDAHa"
>
  <span data-testid="BaseLabel"
        class="sc-dsLQwm likJvJ"
  >
    Checkbox entry
  </span>
  <input data-testid="BaseCheckbox"
         required
         class="sc-elDIKY HOnpQ"
         type="checkbox"
  >
</div>
`;

exports[`molecules/LabelledCheckbox Invalid play-test 1`] = `
<div data-testid="LabelledCheckbox"
     class="sc-braxZu ldDAHa"
>
  <span data-testid="BaseLabel"
        class="sc-dsLQwm likJvJ"
  >
    Checkbox entry
  </span>
  <input data-testid="BaseCheckbox"
         required
         class="sc-elDIKY dKDQel"
         type="checkbox"
  >
</div>
`;
